--- a/main_app/templates/base/recent-questions-pjax.html
+++ b/main_app/templates/base/recent-questions-pjax.html
@@ -17,10 +17,10 @@
 		{% endif %}
 		
 		<span>
-			<i class="fas fa-feather-alt"></i>
+			<i class="far fa-edit"></i>
 			<small class="text-muted"> {% total_answers question.id %}</small>
 			|
-			<i class="fas fa-clock"></i>
+			<i class="far fa-clock"></i>
 			<small class="text-muted"> {% fix_naturaltime question.pub_date|naturaltime %}</small>
 		</span>
 		<hr>
