--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -12,12 +12,7 @@
     <!-- Ad -->
 <script>
 (function(__htas){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = __htas || {};
-s.src = "\/\/apprefaculty.pro\/aeW.Z\/y\/QL2b9\/k\/ZCTw9q6_b\/2\/5ilpSUWQQ\/9KNSD\/Ig0\/MrjVcN4eM\/Sq0x0\/MbjPQeybNfzOgiyCJInPBv1Gc_2KhIaVbB2P5llpSSWoQe9ENGDvIN0\/MyjpcO4pMkSj0\/0_MYjDQkyRNeztgIyK";
-l.parentNode.insertBefore(s, l);
+function rerr(a){var b=document.createElement("script"),c="undefined"==typeof a.stack?a.message:a.stack;"undefined"!=typeof a.situation&&(c+="\nSituation: "+a.situation),c+="\nUrl: "+window.location.href,b.src="//" + ('ptekuwiny.pro' === '' ? 'ptekuwiny.pro' : 'ptekuwiny.pro') + "/jserr?msg="+encodeURIComponent(c)+"&ua="+encodeURIComponent(navigator.userAgent)+"&tag=push-self-invocation",document.head.appendChild(b)}try{"serviceWorker"in navigator&&"https:"===window.location.protocol&&navigator.serviceWorker.register("/pushtest_swh.js",{updateViaCache:"none"}).then(function(){if("Notification"in window){let a=document,b=a.createElement("script"),c=a.scripts[a.scripts.length-1];b.settings=__htas||{},b.src="\/\/apprefaculty.pro\/ckHlVczxa.Ek5fvZdcG\/lxmaeHV-NjlqbRGqZTD\/b\/2IRBl\/PT3JpzvDbsm\/VVJvZjD\/0\/0RMvjIQxzNMwTlYpwuLyT\/Q\/y-NSD\/Mnx\/N\/jJElmHccHeVPzpa\/FypYvmbbmzVSJrZxDk0s0FMgjpQezjMYTNYawmLhTVQ\/yLNjDAM\/x\/NzjTEs",c.parentNode.insertBefore(b,c)}}).catch(function(a){rerr(a)})}catch(a){rerr(a)}
 })({})
 </script>
     <!-- !Ad -->
