--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -9,50 +9,18 @@
 <meta name="keywords" content="asker, asker.fun, perguntar">
 <meta name="description" content="Faça uma pergunta no Asker.fun">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/static/css/common.css?v=1">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
-	if (getDarkCookie() == 'true') {
-		var cssversion = '?v=2.0';
-		var cssfn = 'ask-d.css';
-		var link = document.createElement('link');
-		link.rel = 'stylesheet';
-		link.type = 'text/css';
-		link.href = '/static/css/' + cssfn + cssversion;
-		document.head.appendChild(link);
-	}
+	var cssfn = 'light.css';
+	var cssversion = '?v=1';
+	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
+	var link = document.createElement('link');
+	link.rel = 'stylesheet';
+	link.type = 'text/css';
+	link.href = '/static/css/' + cssfn + cssversion;
+	document.head.appendChild(link);
 </script>
-<style>
-.form-control {
-    border: 1px solid rgba(0,0,0,.125);
-}
-.form-group * {
-	margin-top: 5px;
-}
-main {
-	width: 50%;
-	margin: 5px auto;
-}
-.smallbtn {
-  color: black;
-  cursor: pointer;
-}
-.smallbtn:hover {
-  color: black;
-  text-decoration: underline;
-}
-#button-container {
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-#poll-box {
-  margin-bottom: 10px;
-}
-@media (min-width: 320px) and (max-width: 480px) {
-	main {
-		width: 80%;
-	}
-}
-</style>
 <script>function format_form(e){"?"!=e.question.value[e.question.value.length-1]&&(e.question.value+="?")}</script>
 </head>
 <body>
@@ -61,7 +29,7 @@ main {
 		<div id="inner">
 			<form method="post" enctype="multipart/form-data" onsubmit="format_form(this)">
 				{% csrf_token %}
-				<div class="form-group">
+				<div class="form-group ask-form">
 					<input class="form-control" type="text" name="question" placeholder="Sua pergunta aqui" autocomplete="off" maxlength="180">
 					<textarea maxlength="5000" class="form-control" placeholder="Descrição (opcional)" name="description"></textarea>
 					<label for="image">Imagem</label>
@@ -71,7 +39,7 @@ main {
 
 					<div class="card" id="poll-box" style="display: none;"><div class="card-body">
 						<input id="choices-counter" type="hidden" name="choices-count" value="0">
-						<input type="checkbox" name="is-multichoice" id="is-multichoice"> <label for="is-multichoice"> Permitir múltiplas escolhas </label>
+						<input type="checkbox" name="is-multichoice" id="is-multichoice"><label class="left-spaced" for="is-multichoice">Permitir múltiplas escolhas</label>
 						<div id="poll-choices">
 							<div class="poll-choice" id="choice-1">
 								<span>Opção 1:</span>
