--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -14,11 +14,12 @@
 	}
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/static/css/common.css?v=1">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
-	var cssfn = 'index.css';
-	var cssversion = '?v=12';
-	if (getDarkCookie() == 'true') { cssfn = 'index-d.css'; }
+	var cssfn = 'light.css';
+	var cssversion = '?v=1';
+	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 	var link = document.createElement('link');
 	link.rel = 'stylesheet';
 	link.type = 'text/css';
