--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -9,11 +9,11 @@
 <meta name="keywords" content="asker, asker.fun, perguntar">
 <meta name="description" content="Faça uma pergunta no Asker.fun">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/common.css?v=1">
+<link rel="stylesheet" href="/static/css/common.css?v=2">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
-	var cssversion = '?v=1';
+	var cssversion = '?v=2';
 	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 	var link = document.createElement('link');
 	link.rel = 'stylesheet';
@@ -35,7 +35,7 @@
 					<label for="image">Imagem</label>
 					<input type="file" class="form-control-file" id="image" name="file" onclick="return veracity_test({{ user_p.total_points }}, {% MINIMUM_POINTS_FOR_POSTING_IMAGES %});">
 
-					<div id="button-container"><a href="#" class="smallbtn" onclick="togglePoll();">Incluir enquete</a></div>
+					<a href="#" class="vertical-spaced" onclick="togglePoll();" style="color: #f8f9f0;">Incluir enquete</a>
 
 					<div class="card" id="poll-box" style="display: none;"><div class="card-body">
 						<input id="choices-counter" type="hidden" name="choices-count" value="0">
