--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -6,21 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<style>
-	main {
-		width: 50%;
-		margin: auto;
-	}
-	.form-control {
-		margin-right: 5px;
-		border: 1px solid rgba(0,0,0,.125);
-	}
-	@media (min-width: 320px) and (max-width: 480px) {
-		main {
-			width: 98%;
-		}
-	}
-</style>
+<link rel="stylesheet" href="/static/css/common.css?v=2">
+<script src="/static/js/cookieman.js?v=1"></script>
+<script>
+	var cssfn = 'light.css';
+	var cssversion = '?v=2';
+	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
+	var link = document.createElement('link');
+	link.rel = 'stylesheet';
+	link.type = 'text/css';
+	link.href = '/static/css/' + cssfn + cssversion;
+	document.head.appendChild(link);
+</script>
 </head>
 
 	<body><main>
@@ -102,30 +99,9 @@
 	</main></body>
     <script src="/static/js/cookieman.js?v=1"></script>
 	<script>
-function toggleDarkMode() {
-	document.body.style = "background: #222; color: white;";
-
-	texts = document.getElementsByClassName('form-control')
-	for (i = 0; i < texts.length; i++) {
-	    texts[i].classList.add("bg-dark");
-	    texts[i].classList.add("text-light");
-	}
-}
-darkcheckbox = document.getElementById('dark-mode');
-if (getDarkCookie() == 'true') {
-	toggleDarkMode();
-	darkcheckbox.checked = true;
-}
-darkcheckbox.addEventListener('change', function() {
-    if (this.checked) {
-    	setDarkCookie(true);
-    	alert('Modo escuro ativado.');
-    } else {
-    	setDarkCookie(false);
-    	alert('Modo escuro desativado.');
-    }
-});
-
-
+		if (getDarkCookie() == 'true') {
+			document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
+			document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
+		}
 	</script>
 </html>
