--- a/main_app/templates/error.html
+++ b/main_app/templates/error.html
@@ -13,34 +13,20 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/common.css?v=2">
     <script src="/static/js/cookieman.js?v=1"></script>
     <script>
-        var cssfn = 'index.css';
-        var cssversion = '?v=13';
-        if (getDarkCookie() == 'true') { cssfn = 'index-d.css'; }
+        var cssfn = 'light.css';
+        var cssversion = '?v=2';
+        if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
         var link = document.createElement('link');
         link.rel = 'stylesheet';
         link.type = 'text/css';
         link.href = '/static/css/' + cssfn + cssversion;
         document.head.appendChild(link);
 
-        document.getElementById('wait').remove();
+	    document.getElementById('wait').remove();
     </script>
-    <style>
-        main {
-            width: 60%;
-            margin: auto;
-        }
-        .err-msg {
-            text-align: center;
-        }
-
-        @media (min-width: 320px) and (max-width: 480px) {
-            main {
-                width: 98%;
-            }
-        }
-    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
