--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -14,11 +14,11 @@
 	}
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/common.css?v=1">
+<link rel="stylesheet" href="/static/css/common.css?v=2">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
-	var cssversion = '?v=1';
+	var cssversion = '?v=2';
 	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 	var link = document.createElement('link');
 	link.rel = 'stylesheet';
@@ -43,7 +43,7 @@
 	<body>
 	{% include "includes/navbar.html" %}
 	{{ account_verification_alert|safe }}
-
+	<main>
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
 				<span class="nav-link main-tab bg-main-tab" id="popular">Popular</span>
@@ -99,6 +99,7 @@
 	<h5>Fim! <a href="/news">Clique aqui</a> para ver as novas perguntas.</h5>
 </section>
 <!-- !Questões populares -->
+	</main>
 
 <!-- PJAX -->
 <script src="/static/js/jquery-pjax/jquery.pjax.js"></script>
