--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -57,19 +57,19 @@
 			<p id="bio">{{ user_p.bio|linebreaksbr }}</p>{% endif %}
 		</center>
 		<div class="card-group">
-			<div class="card bg-inner">
+			<div class="card bg-inner-when-dark">
 				<div class="card-body">
 					<h5>Perguntas</h5>
 					<p>{{user_p.total_questions}}</p>
 				</div>
 			</div>
-			<div class="card bg-inner">
+			<div class="card bg-inner-when-dark">
 				<div class="card-body">
 					<h5>Respostas</h5>
 					<p>{{user_p.total_responses}}</p>
 				</div>
 			</div>
-			<div class="card bg-inner">
+			<div class="card bg-inner-when-dark">
 				<div class="card-body">
 					<h5>Pontos</h5>
 					<p>{{user_p.total_points}}</p>
