--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -20,8 +20,12 @@ body {
   border-color: rgba(0,0,0,.125) !important;
   background-color: #394046 !important;
 }
-.bg-inner {
+.bg-inner, .bg-inner-when-dark {
   background-color: #394046 !important;
+  color: #f8f9fa;
+}
+.bg-innermost, .bg-innermost-when-dark {
+  background-color: #454d54 !important;
   color: #f8f9fa;
 }
 .form-control {
@@ -39,6 +43,9 @@ body {
 hr {
     border-color: #394046;
 }
+.clickable, .clickable:hover {
+    color: #f8f9fa !important;
+}
 /* General-end */
 
 /* Ask */
@@ -50,7 +57,16 @@ hr {
   background-color: #454d54 !important;
   color: #f8f9fa !important;
 }
-.smallbtn, .smallbtn:hover {
-    color: #f8f9fa !important;
-}
 /* Ask-end */
+
+/* Question */
+.post-pub-date {
+  color: #888;
+}
+.poster-info {
+  color: #f8f9fa;
+}
+.poster-info:hover {
+  color: white;
+}
+/* Question-end */
