--- a/static/css/light.css
+++ b/static/css/light.css
@@ -1,5 +1,25 @@
-/* Ask */
-.smallbtn, .smallbtn:hover {
+/* Question */
+.poster-info {
+  color: #343a40;
+}
+.poster-info:hover {
   color: black;
 }
-/* Ask-end */
+.post-pub-date {
+  color: #888;
+}
+/* Question-end */
+
+/* General */
+.clickable, .clickable:hover {
+    color: #212529;
+}
+.bg-inner {
+  background-color: rgba(0, 0, 0, .03) !important;
+  color: #212529;
+}
+.bg-innermost {
+  background-color: rgba(0, 0, 0, .03) !important;
+  color: #212529;
+}
+/* General */
