--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -5,7 +5,7 @@
 <html lang="pt-br">
 <head>
 <title>Asker | Página inicial</title>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style id="wait">
 	body {
@@ -35,9 +35,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
 
-
-<!-- Ad -->
-<meta name="hilltopads-site-verification" content="845ebaf177b26bf8551ff0a8c30f9088dbd0b241" />
 </head>
 
 	<body>
