--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -36,11 +36,10 @@
     <body>
 		{% include "includes/navbar.html" %}
         <section class="card notifications bg-main">
-			<button class="btn btn-outline-primary" onclick="read_all()">Marcar todas como lidas</button>
             <ul class="list-group list-group-flush">
             	{% for notification in notifications %}
                 <!--<li class="list-group-item bg-main notif" style="background-color: {% if not notification.read %}#f7f7f7;{% endif %}">-->
-                <li class="list-group-item bg-main notif" {% if not notification.read %} style="background-color: #f5f5f5;" {% endif %}>
+                <li class="list-group-item bg-main notif">
 	                <div class="card-body">
 	                    <p class="ntime">{% fix_naturaltime notification.creation_date|naturaltime %}</p>
 	                    <p class="ntext">{{ notification.text|safe }}</p>
