--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -6,18 +6,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="/static/css/common.css?v=2">
+<link rel="stylesheet" href="/static/css/common.css?v=2.3">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
 	var cssversion = '?v=2';
 	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 	var link = document.createElement('link');
+	link.id = 'theme-css';
 	link.rel = 'stylesheet';
 	link.type = 'text/css';
 	link.href = '/static/css/' + cssfn + cssversion;
 	document.head.appendChild(link);
 </script>
+	<style>
+		*, .form-control {
+			transition: background-color 1s, color 1s, border 1s;
+		}
+
+	</style>
 </head>
 
 	<body><main>
@@ -78,16 +85,16 @@
 			<input type="hidden" name="type" value="privacy">
 			{% csrf_token %}
 			{% if user_p.hide_activity %}
-				<input type="checkbox" name="hide-activity" id="hide-activity" checked> <label for="hide-activity"> Esconder perguntas e respostas do meu perfil</label><br>
+				<input type="checkbox" name="hide-activity" id="hide-activity" checked> <label class="inline" for="hide-activity"> Esconder perguntas e respostas do meu perfil</label><br>
 			{% else %}
-				<input type="checkbox" name="hide-activity" id="hide-activity"> <label for="hide-activity"> Esconder perguntas e respostas do meu perfil</label><br>
+				<input type="checkbox" name="hide-activity" id="hide-activity"> <label class="inline" for="hide-activity"> Esconder perguntas e respostas do meu perfil</label><br>
 			{% endif %}
 			<input class="btn btn-primary" type="submit" value="Alterar privacidade">
 		</form>
 
 		<hr>
 		<h2>Layout</h2>
-		<input id="dark-mode" type="checkbox" name="dark-mode" /> <label for="dark-mode"> Ativar modo escuro para este dispositivo (beta)</label><br>
+		<input id="dark-mode" type="checkbox" name="dark-mode" /> <label class="inline" for="dark-mode"> Ativar modo escuro para este dispositivo (beta)</label><br>
 
 		{% if user.username == user_p.user.username %}
 		<hr>
@@ -99,9 +106,18 @@
 	</main></body>
     <script src="/static/js/cookieman.js?v=1"></script>
 	<script>
+		darkcheckbox = document.getElementById('dark-mode');
 		if (getDarkCookie() == 'true') {
-			document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
-			document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
+			darkcheckbox.checked = true;
 		}
+		darkcheckbox.addEventListener('change', function() {
+			if (this.checked) {
+				setDarkCookie(true);
+				document.getElementById('theme-css').href = '/static/css/' + 'dark.css' + cssversion;
+			} else {
+				setDarkCookie(false);
+				document.getElementById('theme-css').href = '/static/css/' + 'light.css' + cssversion;
+			}
+		});
 	</script>
 </html>
