--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -63,7 +63,15 @@
 				</div>
 			</form>
 		</div>
-		
+
+{% random_int 1 3 as RANDOM_INT %}
+{% if RANDOM_INT == 3 %}
+<!-- Ad -->
+<script async="async" data-cfasync="false" src="//pl16383615.effectiveperformancenetwork.com/fdd9b2c24d773b96fd13c903a0503d6a/invoke.js"></script>
+<div id="container-fdd9b2c24d773b96fd13c903a0503d6a"></div>
+<!-- !Ad -->
+{% endif %}
+
 		<footer>
 			<p>
 				Email de suporte:
