--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -1,4 +1,3 @@
-{% spaceless %}
 {% load main_app_extras %}
 <!doctype html>
 <html lang="pt-br">
@@ -22,8 +21,20 @@
 	document.head.appendChild(link);
 </script>
 <script>function format_form(e){"?"!=e.question.value[e.question.value.length-1]&&(e.question.value+="?")}</script>
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Font awesome -->
+<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
+	
+	{% include "includes/navbar.html" %}
+	
 	<main>
 		{% if user_p.active %}
 		<div id="inner">
@@ -120,7 +131,6 @@
 	}
 </script>
 <script src="/static/js/general_functions.js?version=2"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 </html>
-{% endspaceless %}
