--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -8,20 +8,6 @@
     <title>Test</title>
   </head>
   <body>
-    
-    <h1>MUITO LEGAL</h1>
-    <p>ABSOLUTAMENTE</p>
-    <p>BLABLABLA</p>
-    <p>kfksfsjlfsf</p>
-    
-<!-- Ad -->
-<script async="async" data-cfasync="false" src="//pl16383615.effectiveperformancenetwork.com/fdd9b2c24d773b96fd13c903a0503d6a/invoke.js"></script>
-<div id="container-fdd9b2c24d773b96fd13c903a0503d6a"></div>
-<!-- !Ad -->
-    
-    <h1>oi</h1>
-    <p>KKFJFKSJSFSFSSFSFJSFISJIFJSFJOAFJOIJFOJFJSFJOIAFDSAFSAF</p>
-    <P>LEGAL</P>
-    
+	  {{ result }}
   </body>
 </html>
