--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -13,10 +13,11 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
+		<link rel="stylesheet" href="/static/css/common.css?v=3">
 		<script>
-			var cssfn = 'question.css';
-			var cssversion = '?v=14.1';
-			if (getDarkCookie() == 'true') { cssfn = 'question-d.css';}
+			var cssfn = 'light.css';
+			var cssversion = '?v=3';
+			if (getDarkCookie() == 'true') { cssfn = 'dark.css';}
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
