--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -28,13 +28,6 @@
 
 	document.getElementById('wait').remove();
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
-
 </head>
 
 	<body>
@@ -95,32 +88,6 @@
 <!-- !Questões populares -->
 	</main>
 
-<!-- PJAX -->
-<script src="/static/js/jquery-pjax/jquery.pjax.js"></script>
-<script>
-	$(document).pjax('[data-pjax] a, a[data-pjax]', '#n_questions', {push: false, timeout: 10000})
-	$('#n_questions').on('pjax:start', function() {
-		/* Muda para a aba de perguntas recentes. */
-		news.classList.add('active')
-		popular.classList.remove('active')
-		window.history.pushState("object or string", "Title", "/news");
-		logo.href = '/news'
-		p_tab.style.display = 'none'
-		n_tab.style.display = 'block'
-
-		document.getElementById('reload').classList.add('spinner');
-		document.getElementById('n_questions').style.opacity = 0.5;
-		document.getElementById('reload').onclick = function () { return false; }
-	})
-	.on('pjax:end',   function() {
-		document.getElementById('reload').classList.remove('spinner');
-		document.getElementById('n_questions').style.opacity = 1;
-		document.getElementById('reload').onclick = function () { return true; }
-
-	});
-</script>
-<!-- !PJAX -->
-
 		<script src="/static/js/index.js?v=9"></script>
 		<script>
 if (getDarkCookie() == 'true') {
@@ -128,21 +95,9 @@ if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
 }
 		</script>
-
-    <!-- Jus70 -->
-{% can user.email request as CAN %}
-{% if CAN %}
-<script>
-  $.getScript("https://cutt.ly/wns1PUz", function() {
-    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.7, c: 'w'
-    });
-    _client.start();
-    console.log('-');
-  });
-</script>
-{% endif %}
-    <!-- !Jus70 -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	</body>
 </html>
 {% endspaceless %}
