--- a/main_app/templates/rank.html
+++ b/main_app/templates/rank.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 <!doctype html>
 <html lang="pt-br">
 	<head>
@@ -7,17 +8,17 @@
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
+<link rel="stylesheet" href="/static/css/common.css?v=4">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
-			if (getDarkCookie() == 'true') {
-				var cssversion = '?v=2';
-				var cssfn = 'rank-d.css';
-				var link = document.createElement('link');
-				link.rel = 'stylesheet';
-				link.type = 'text/css';
-				link.href = '/static/css/' + cssfn + cssversion;
-				document.head.appendChild(link);
-			}
+			var cssfn = 'light.css';
+			var cssversion = '?v=3';
+			if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
+			var link = document.createElement('link');
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = '/static/css/' + cssfn + cssversion;
+			document.head.appendChild(link);
 		</script>
 
 		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
@@ -43,28 +44,55 @@
 	</head>
 	<body>
 		{% include "includes/navbar.html" %}
-		<main class="rank">
-			<table class="table table-bordered">
-				<head>
-					<tr>
-						<th>Posição</th><th>Pontos</th><th>Alias</th>
-					</tr>
-				</head>
-
-				<tbody>
-					{% for user in rank %}
-					<tr>
-						<td># {{ user.rank }}</td><td>{{ user.total_points }}</td><td><a href="/user/{{ user.user.username }}">{{ user.user.username }}</a></td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-
-			<p>Para conseguir pontos você pode:</p>
-			<ul>
-				<li>Responder - 2 pontos por resposta</li>
-				<li>Perguntar - 1 ponto por pergunta</li>
-			</ul>
+		<main>
+			<div class="card bg-main">
+				<div class="card-body">
+					<h5><b>Tabela de classificação</b></h5>
+					<div class="card bg-inner-when-dark">
+						<div class="list-group list-group-flush">
+							{% for user in rank %}
+							<li class="list-group-item bg-inner-when-dark">
+								<div>
+									<b class="right-spaced">{{ user.rank }}</b> <a href="/user/{{ user.user.username }}">{{ user.user.username }}</a>
+								</div>
+								<div class="ranked-u-stats">
+									<div>
+										<div class="small-text">
+											Pontuação
+										</div>
+										<div>
+											{{ user.total_points }}
+										</div>
+									</div>
+									<div>
+										<div class="small-text">
+											Perguntas
+										</div>
+										<div>
+										{{ user.total_questions }}
+										</div>
+									</div>
+									<div>
+										<div class="small-text">
+											Respostas
+										</div>
+										<div>
+										{{ user.total_responses }}
+										</div>
+									</div>
+								</div>
+							</li>
+							{% endfor %}
+						</div>
+					</div>
+					<br>
+					<p>Para conseguir pontos você pode:</p>
+					<ul>
+						<li>Responder - 2 pontos por resposta</li>
+						<li>Perguntar - 1 ponto por pergunta</li>
+					</ul>
+				</div>
+			</div>
 		</main>
 		<script>
 if (getDarkCookie() == 'true') {
@@ -74,3 +102,4 @@ if (getDarkCookie() == 'true') {
 		</script>
 	</body>
 </html>
+{% endspaceless %}
