--- a/main_app/templates/reset-password-1-part.html
+++ b/main_app/templates/reset-password-1-part.html
@@ -7,35 +7,45 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		
 		<title>Alterar senha</title>
-		<style>
-			.form-control {
-				margin-right: 5px;
-				border: 1px solid rgba(0,0,0,.125);
+
+		<style id="wait">
+			body {
+				visibility: hidden;
+				opacity: 0;
 			}
 		</style>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/static/css/common.css?v=4">
+		<script src="/static/js/cookieman.js?v=1"></script>
+		<script>
+			var cssfn = 'light.css';
+			var cssversion = '?v=2';
+			if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
+			var link = document.createElement('link');
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = '/static/css/' + cssfn + cssversion;
+			document.head.appendChild(link);
+
+			document.getElementById('wait').remove();
+		</script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
 	</head>
-	<body>
-		<form class="form-inline" method="get" action="/reset-password">
+	<body><main><br><div class="card bg-main"><div class="card-body">
+		<span><b>Alteração de senha</b></span>
+		<form class="form-inline inline-input" method="get" action="/reset-password">
 			<input type="hidden" name="type" value="email-verification">
-			<input class="form-control" type="text" name="email" placeholder="Email">
-			<input class="btn btn-primary" type="submit" value="Ok">
+			<input class="form-control left-input" type="text" name="email" placeholder="Email">
+			<input class="btn btn-primary" type="submit" value="Enviar">
 		</form>
 		<p>Para alterar sua senha, digite seu email no campo acima, te enviaremos um email de confirmação e então o formulário para a troca de senha.</p>
+		<p><a href="/">Cancelar</a></p>
+	</div></div></main>
 	<script src="/static/js/cookieman.js?v=1"></script>
-	<script>
-function toggleDarkMode() {
-	document.body.style = "background: #222; color: white;";
-
-	texts = document.getElementsByClassName('form-control')
-	for (i = 0; i < texts.length; i++) {
-	    texts[i].classList.add("bg-dark");
-	    texts[i].classList.add("text-light");
-	}
-}
-if (getDarkCookie() == 'true') {
-	toggleDarkMode();
-}
-
-	</script>
 	</body>
 </html>
