Fix crash no js p/ upload de imagens quando não tem ads

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -242,7 +242,8 @@ r = Math.random();
 if (r < 0.8) {
 	document.getElementById("ad").remove();
 }
-
+</script>
+<script>
 /* Js p/ upload de imagem em respostas */
 document.getElementById('upload-photo').onchange = function () {
 	text = document.getElementById('upload-photo-text')
